--- a/main.css
+++ b/main.css
@@ -30,11 +30,11 @@ body {
 
 =============================*/
 
-img {
+.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: 50%;
 }
 
 .jumbotron {
